--- a/task4/.vscode/settings.json
+++ b/task4/.vscode/settings.json
@@ -57,6 +57,7 @@
         "string_view": "cpp",
         "__string": "cpp",
         "ios": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "core": "cpp"
     }
 }
